# typechecker

./: README.md  typechecker.cabal
src/: AST.hs  Examples.hs  Typecheck.hs
