cabal-version:      2.4
name:               typechecker
version:            0.1.0.0
synopsis:           Example typechecker for a simple imperative language
author:             Pedro Vasconcelos
maintainer:         pbv@dcc.fc.up.pt
extra-source-files: CHANGELOG.md

library typechecker-lib
    other-modules:   AST, Typecheck, Examples

    build-depends:    base ^>=4.16.4.0, containers
    hs-source-dirs:   src
    default-language: Haskell2010
